--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bensampo/laravel-enum": "^6.7",
         "guzzlehttp/guzzle": "^7.2",
+        "imanghafoori/laravel-heyman": "^2.2",
+        "imanghafoori/laravel-nullable": "^1.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.3",
+        "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
