--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "bensampo/laravel-enum": "^6.7",
+        "doctrine/dbal": "^3.5.1",
         "guzzlehttp/guzzle": "^7.2",
         "imanghafoori/laravel-heyman": "^2.2",
         "imanghafoori/laravel-nullable": "^1.2",
